--- a/css/estilos-1.css
+++ b/css/estilos-1.css
@@ -66,3 +66,20 @@ body {
     color: #111;
 }
 
+.button-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button-box .button {
+    text-decoration: none;
+    font-weight: 600;
+    padding: 10px;
+    border-radius: 4px;
+    background-color: #2C8F20;
+}
+
+.button-box .button:hover {
+    background-color: #BC105C;
+}
