--- a/css/estilos-01.css
+++ b/css/estilos-01.css
@@ -23,6 +23,12 @@ body {
     font-size: 50px;
 }
 
+.head-title .logo i {
+    float: left;
+    color: transparent;
+    margin: 0%;
+}
+
 .games {
     margin: 10px 140px;
     padding: 30px 20px;
@@ -30,19 +36,23 @@ body {
     background-color: #BC105C;
 }
 
-.games-subtitle {
+.message {
     font-size: 20px;
     font-weight: 700;
 }
 
-.games .all-games {
+.box-message i {
+    color: transparent;
+}
+
+.games .box-game {
     background-color: #fff;
     margin-top: 20px;
     padding: 8px 10px;
     border-radius: 6px;
 }
 
-.all-games .game-title {
+.box-game .game-title {
     text-align: right;
     font-size: 18px;
     font-weight: 600;
@@ -50,7 +60,7 @@ body {
     color: #BC105C;
 }
 
-.all-games .image {
+.box-game .image {
     position: relative;
     padding: 0%;
     margin: 0%;
@@ -62,18 +72,18 @@ body {
     height: 100%;
 }
 
-.all-games .game-description .text{
+.box-game .game-description .text{
     font-size: 12px;
     color: #111;
 }
 
-.button-box {
+.buy-button {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.button-box .button {
+.buy-button .buy {
     text-decoration: none;
     font-weight: 600;
     padding: 10px;
@@ -81,8 +91,12 @@ body {
     background-color: #2C8F20;
 }
 
-.button-box .button:hover {
+.buy-button .buy:hover {
     background-color: #BC105C;
+}
+
+.botones .boton {
+    cursor: none;
 }
 
 .foot {
