--- a/css/estilos-02.css
+++ b/css/estilos-02.css
@@ -16,6 +16,7 @@ header {
     display: flex;
     align-self: center;
     justify-content: center;
+    width: 100%;
     padding: 20px;
     margin-bottom: 20px;
     background-color: #00031D;
@@ -46,8 +47,8 @@ header:hover {
     width: 250px;
     margin: auto;
     margin-bottom: 20px;
-    transform: translateX(-200px);
     border-radius: 14px;
+    transform: translateX(-197px);
     background-color: #151826;
     background: linear-gradient(90deg, #00031D, #250157);
     color: #fff;
