--- a/css/estilos-01.css
+++ b/css/estilos-01.css
@@ -24,32 +24,34 @@ body {
 }
 
 .games {
-    margin: 0px 140px;
-    padding: 20px 20px;
+    margin: 10px 140px;
+    padding: 30px 20px;
+    border-radius: 8px;
     background-color: #BC105C;
 }
 
-.games-subtitle {
-    font-size: 18px;
+.message {
+    font-size: 20px;
     font-weight: 700;
 }
 
-.games .all-games {
+
+.games .box-game {
     background-color: #fff;
     margin-top: 20px;
     padding: 8px 10px;
     border-radius: 6px;
 }
 
-.all-games .game-title {
+.box-game .game-title {
     text-align: right;
     font-size: 18px;
     font-weight: 600;
-    border-bottom: 1px dotted #BC105C;
+    border-bottom: 2px dotted #BC105C;
     color: #BC105C;
 }
 
-.all-games .image {
+.box-game .image {
     position: relative;
     padding: 0%;
     margin: 0%;
@@ -59,6 +61,39 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+.box-game .game-description .text{
+    font-size: 12px;
+    color: #111;
+}
+
+.buy-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.buy-button .buy {
+    text-decoration: none;
+    font-weight: 600;
+    padding: 10px;
+    border-radius: 4px;
+    background-color: #2C8F20;
+}
+
+.buy-button .buy:hover {
+    background-color: #BC105C;
+}
+
+.foot {
+    padding: 20px;
+    margin: 20px 140px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 6px;
+    background-color: #E96093;
 }
 
 
