--- a/css/estilos-games.css
+++ b/css/estilos-games.css
@@ -8,83 +8,103 @@ body {
     background-color: #E11364;
 }
 
-.head-title {
-    margin: 0;
-    padding: 0;
-    border-left: 6px solid #fff;
-    background-color: #BC105C;
-}
-
-.head-title .title{
+header {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    width: 100%;
+    min-width: 710px;
     margin-bottom: 20px;
-    margin-left: 20px;
-    padding: 0px;
+    border-left: 4px solid #fff;
+    border-right: 4px solid #fff;
+    background-color: #BC105C;
+    color: #fff;
 }
 
-.head-title .title .text-title{
+header .title {
     text-decoration: none;
+    color: #fff;
+    font-size: 40px;
+    font-weight: 400;
 }
 
-.contenedor {
+header .title a {
+    text-decoration: none;
+    color: #fff;
+}
+
+header .logo i{
+    color: transparent;
+}
+
+.games {
     margin: auto;
-    padding: 20px;
+    padding: 0px 40px 40px 40px; 
     width: 720px;
     border-radius: 12px;
     background-color: #BC105C;
 }
 
-.box-game .imagen-box {
+.games .box-arrow {
+    display: flex;
+    justify-content: space-around;
+}
+
+.games .box-arrow a i{ 
+    color: transparent;
+}
+
+.box-game .game-img{
     float: right;
     position: relative;
+    transform: translate(-20px, 90px);
     width: 400px;
     height: 300px;
+    padding: 20px;
+    background-color: #fff;
     border: 3px solid #fff;
+    border-radius: 12px;
 }   
 
 .imagen-box .img {
-    position: relative;
     width: 100%;
     height: 100%;
 }   
 
-.box-game .imagenes-box {
-    flex-direction: row;
-    display: flexbox;
-}
-
 .imagenes-box .imgs {
-    position: relative;
     width: 160px;
     height: 100px;
     border: 3px solid #fff;
 }
 
 .imgs .masImg{
-    position: relative;
     width: 100%;
     height: 100%;
 }
 
-.box-game .titulo-juego {
-    margin: 40px 20px 0px 20px;
-    padding: 20px;
+.box-game .game-title {
+    padding: 20px 20px;
     font-size: 20px;
     border-radius: 8px;
     color: #BC105C;
     background-color: #fff;
 }
 
-.titulo-juego a {
+.box-game .plataform {
+    padding: 10px;
+    border-radius: 6px;
+    background-color: #fff;
     color: #BC105C;
-    text-decoration: none;
 }
 
-.titulo-juego a:hover {
+.plataform .name-plataform {
+    padding-left: 10px;
+    font-weight: 600;
+    border-left: 2px solid #BC105C;
     color: #BC105C;
-    border-bottom: 2px solid #BC105C;
 }
 
-.box-game .descripcion{
+.box-game .descripcion {
     margin: 30px 20px;
     margin-bottom: 0;
     padding: 10px;
@@ -92,56 +112,73 @@ body {
     font-weight: 600;
 }
 
-.box-game .desc-text {
-    margin: 10px 20px;
-    padding: 20px;
+.box-game .game-description {
+    margin: 0px;
     font-size: 20px;
 }
 
-.box-game .precio-box {
+.game-description .botones {
+    float: right;
+    width: 1px;
+}
+
+.botones a i {
+    color: transparent;
+}
+
+.box-game .precio {
     float: left;
     width: 130px;
-    margin: 20px 30px;
+    margin: 20px 60px 0px 0px;
     padding: 10px 20px;
-    transform: translateY(-30px);
+    transform: translateY(-28px);
     background-color: #fff;
     border: 4px solid #E11364;
     color: #BC105C;
 }
 
-.precio-box .precio {
+.precio span {
     text-align: right;
     font-size: 24px;
     color: #BC105C;
 }
 
-.box-game button {
-    align-items: center;
-    width: 100px;
-    margin-bottom: 20px;
+.box-game .buy-button {
+    display: flex;
+    justify-content: center;
+    width: 190px;
+    text-align: center;
     font-weight: 600;
     border-radius: 4px;
-    transform: translateX(-20px);
+    transform: translateX(20px);
     background-color: #2C8F20;
-    border: none;
-    cursor: pointer;
 }
 
-button:hover {
+.buy-button .buy {
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+}
+
+.buy-button:hover {
     background-color: #E11364;
-    border: 1px solid #fff;
 }
 
 .foot {
-    padding: 20px;
-    margin: 0;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
+    min-width: 710px;
+    padding: 30px;
     margin-top: 20px;
     border-radius: 6px;
+    text-align: center;
     background-color: #E96093;
 }
 
 .foot .foot-text{
-    text-align: center;
     font-weight: 600;
     font-size: 14px;
 }
