--- a/css/estilos-02.css
+++ b/css/estilos-02.css
@@ -57,7 +57,8 @@ header:hover {
     text-align: center;
     font-size: 20px;
     margin-top: 10px ;
-    padding: 10px 40px 10px 10px;
+    margin-left: 0px;
+    padding: 10px 40px 10px 20px;
     border-radius: 14px;
     background: linear-gradient(90deg, #00031D, #250157);
 }
