--- a/css/estilos-02.css
+++ b/css/estilos-02.css
@@ -46,8 +46,7 @@ header:hover {
     align-items: center;
     margin: auto;
     margin-bottom: 20px;
-    width: 640px;
-    padding: 0px 20px;
+    width: 630px;
     border-radius: 14px;
     color: #fff;
 }
@@ -57,7 +56,8 @@ header:hover {
     text-align: center;
     font-size: 20px;
     margin-top: 10px ;
-    padding: 10px 40px 10px 10px;
+    margin-left: 0px;
+    padding: 10px 40px 10px 20px;
     border-radius: 14px;
     background: linear-gradient(90deg, #00031D, #250157);
 }
