--- a/css/estilos-02.css
+++ b/css/estilos-02.css
@@ -28,12 +28,17 @@ header .title {
     font-size: 28px;
     font-weight: 400;
 }
-
+.head-title2{
+    font-size: 28px;
+    font-weight: 400; 
+}
 
 header .logo {
     font-size: 28px;
     margin-left: 10px;
 }
+
+
 
 header:hover {
     color: #551A8B;
@@ -41,6 +46,16 @@ header:hover {
 }
 
 .box-message {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 20px;
+    width: 640px;
+    border-radius: 14px;
+    color: #fff;
+}
+.box-message2{
     display: flex;
     justify-content: left;
     align-items: center;
@@ -62,6 +77,19 @@ header:hover {
     background: linear-gradient(90deg, #00031D, #250157);
 }
 
+.box-message .message1{
+    align-self: center;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 10px ;
+    margin-left: 0px;
+    padding: 10px 40px 10px 20px;
+    border-radius: 14px;
+    background: linear-gradient(90deg, #00031D, #250157);
+
+
+}
+    
 .box-message i {
     display: flex;
     font-size: 28px;
@@ -69,6 +97,8 @@ header:hover {
     transform: translate(-34px, 4px);
 
 }
+
+
 
 .box-game {
     margin: auto;
@@ -112,9 +142,17 @@ header:hover {
     border-radius: 10px;
 }
 
+.p
+
 .box-game .text {
     padding: 5px 20px;
     font-weight: 300;
+    text-align: justify;
+}
+.box-game .text1{
+    padding: 5px 20px;
+    font-weight: 300; 
+    text-align: justify;
 }
 
 .box-game .detalles {
@@ -153,6 +191,35 @@ header:hover {
     margin-top: 30px;
 }
 
+.box-game .buy-button2{
+    margin: 20px;
+    margin-top: 30px;
+}
+
+.Volver-button{
+    margin: 20px;
+    margin-top: 30px;
+    text-align: justify;
+}
+
+.box-game .Volver-button{
+    margin: 50px;
+    margin-top: 30px;
+    m
+}
+
+.box-game .buy1{
+    width: 120px;
+    height: 40px;
+    padding: 10px 20px;
+    text-decoration: none;
+    border: none;
+    border-radius: 6px;
+    color: #fff;
+    background-color: #551A8B;
+    cursor: pointer;  
+}
+
 .buy-button .buy {
     width: 120px;
     height: 40px;
@@ -164,6 +231,24 @@ header:hover {
     background-color: #551A8B;
     cursor: pointer;
 }
+
+
+
+.Volver-button .volver{
+    width: 400px;
+    margin-left: 600px;
+    height: 40px;
+    padding: 10px 20px;
+    text-decoration: none;
+    border: none;
+    border-radius: 6px;
+    color:#fff;
+    background-color: #551A8B;
+    cursor: pointer; 
+
+}
+
+
 
 .buy-button .buy:hover {
     background-color: #4E066B;
