--- a/css/estilos-02.css
+++ b/css/estilos-02.css
@@ -28,17 +28,11 @@ header .title {
     font-size: 28px;
     font-weight: 400;
 }
-.head-title2{
-    font-size: 28px;
-    font-weight: 400; 
-}
 
 header .logo {
     font-size: 28px;
     margin-left: 10px;
 }
-
-
 
 header:hover {
     color: #551A8B;
@@ -46,16 +40,6 @@ header:hover {
 }
 
 .box-message {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    margin: auto;
-    margin-bottom: 20px;
-    width: 640px;
-    border-radius: 14px;
-    color: #fff;
-}
-.box-message2{
     display: flex;
     justify-content: left;
     align-items: center;
@@ -76,19 +60,6 @@ header:hover {
     border-radius: 14px;
     background: linear-gradient(90deg, #00031D, #250157);
 }
-
-.box-message .message1{
-    align-self: center;
-    text-align: center;
-    font-size: 20px;
-    margin-top: 10px ;
-    margin-left: 0px;
-    padding: 10px 40px 10px 20px;
-    border-radius: 14px;
-    background: linear-gradient(90deg, #00031D, #250157);
-
-
-}
     
 .box-message i {
     display: flex;
@@ -97,8 +68,6 @@ header:hover {
     transform: translate(-34px, 4px);
 
 }
-
-
 
 .box-game {
     margin: auto;
@@ -142,16 +111,9 @@ header:hover {
     border-radius: 10px;
 }
 
-.p
-
 .box-game .text {
     padding: 5px 20px;
     font-weight: 300;
-    text-align: justify;
-}
-.box-game .text1{
-    padding: 5px 20px;
-    font-weight: 300; 
     text-align: justify;
 }
 
@@ -205,10 +167,9 @@ header:hover {
 .box-game .Volver-button{
     margin: 50px;
     margin-top: 30px;
-    m
 }
 
-.box-game .buy1{
+.box-game .buy {
     width: 120px;
     height: 40px;
     padding: 10px 20px;
@@ -231,7 +192,6 @@ header:hover {
     background-color: #551A8B;
     cursor: pointer;
 }
-
 
 
 .Volver-button .volver{
